# internal/server/server.go
@@ -25,6 +25,8 @@ func SetupRouter(r *gin.Engine) {
 	r.GET("/persons/nodes/:id", NodeByID(engine))
 	r.GET("/persons/nodes/path", FindPath(engine))
 	r.GET("/persons/:id", PersonById(engine))
+	r.GET("/persons/divisions", GetAllDivisions(engine))
+	r.GET("/persons/departments", GetAllDepartments(engine))
 
 	r.GET("/docs/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
 }
